--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@
           font-size: small;
           /* background-color: transparent; */
           border-bottom: #D9D9D9 solid 1px;
-          color: #12558A;
+          color: #D9D9D9;
         }
       }
       *{
