--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@
       
       .topnav a:hover {
         background-color: rgb(148, 147, 147);
-        color: #12558A;
+        color: #D9D9D9;
       }
       
       .topnav a.active {
