--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
       }
       
       .topnav a.active {
-        background-color: #12558A;
+        background-color: transparent;
         color: #D9D9D9;
       }
       
@@ -65,6 +65,8 @@
           float: right;
           display: block;
         }
+      
+        
       }
       
       @media screen and (max-width: 600px) {
@@ -75,6 +77,19 @@
           top: 0;
           /* background-color: transparent; */
           z-index: 3;
+        }
+        .incrisiwd{
+          width: 100%;
+          align-items: center;
+        }
+        .incrisiwd > h1{
+         color: yellow;
+         text-align: center;
+          font-size: 35px;
+        }
+        button{
+          height: 23px;
+          align-items: center;
         }
         .topnav.responsive a {
           float: none;
@@ -90,6 +105,16 @@
         box-sizing: border-box;
       }
             @media (max-width: 800px) {
+              .incrisiwd{
+                width: 100%;
+                align-items: center;
+              }
+              .incrisiwd > h1{
+               color: yellow;
+               text-align: center;
+                font-size: 35px;
+              }
+
         .flex-container,.navbar{
           flex-direction: column;
         }
@@ -117,16 +142,44 @@
     padding:0;
     box-sizing: border-box;
 }
+
 body{
     min-height: 100vh;
-    background: #0c192c;
+    background: transparent;
     }
 .container1{
-    position: relative;
+    position: absolute;
     width: 100%;
     height: 100vh;
     overflow: hidden;
 }
+.incrisiwd{
+  position: absolute;
+  padding: 5%;
+  /* width: 60%; */
+  
+  text-align: justify;
+  display: block;
+  background: transparent;
+  height: 70vh;
+  margin-top: 10%;
+}
+.incrisiwd >h1{
+  font-weight: 700;
+  font-size: 44px;
+  color: #e7eef3;
+}
+.h1crisis{
+  font-size: larger;
+  color: orange;
+}
+.free24{
+  font-family: mon;
+ color: orange;
+ font-size: 30px;
+
+}
+
 .bubbles{
     position: relative;
     display: flex;
