--- a/style.css
+++ b/style.css
@@ -80,12 +80,12 @@
         }
         .incrisiwd{
           width: 100%;
-          align-items: center;
+          /* align-items: center; */
         }
         .incrisiwd > h1{
          color: yellow;
-         text-align: center;
-          font-size: 35px;
+         /* text-align: center; */
+          /* font-size: 35px; */
         }
         button{
           height: 23px;
@@ -96,7 +96,7 @@
           display: block;
           text-align: left;
           font-size: small;
-          /* background-color: transparent; */
+          background-color: #12558A;
           border-bottom: #D9D9D9 solid 1px;
           color: #D9D9D9;
         }
@@ -107,13 +107,11 @@
             @media (max-width: 800px) {
               .incrisiwd{
                 width: 100%;
-                align-items: center;
+                padding-top: 15%;
+                margin-top: 35%;
+                /* align-items: center; */
               }
-              .incrisiwd > h1{
-               color: yellow;
-               text-align: center;
-                font-size: 35px;
-              }
+           
 
         .flex-container,.navbar{
           flex-direction: column;
@@ -157,8 +155,7 @@ body{
   position: absolute;
   padding: 5%;
   /* width: 60%; */
-  
-  text-align: justify;
+  /* text-align: justify; */
   display: block;
   background: transparent;
   height: 70vh;
@@ -166,18 +163,74 @@ body{
 }
 .incrisiwd >h1{
   font-weight: 700;
-  font-size: 44px;
+  font-size: 44px auto;
   color: #e7eef3;
+}
+.incrisiwd >h2{
+  font-size: 30px auto;
+  color: #4fc3dc;
 }
 .h1crisis{
   font-size: larger;
   color: orange;
 }
-.free24{
+/* .free24{
   font-family: mon;
  color: orange;
- font-size: 30px;
+ font-size: 30px auto;
 
+} */
+.buttons{
+  margin-top: 5%;
+  width: 100%;
+}
+#btn1{
+  float: left;
+}
+#btn2{
+  float: right;
+}
+
+.button {
+  display: inline-block;
+  border-radius: 4px;
+  background-color: #4fc3;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 28px auto;
+  padding: 20px auto;
+  width: 45%;
+  height: 70px;
+  
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px auto;
+}
+
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 25px auto;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
 }
 
 .bubbles{
@@ -212,3 +265,4 @@ body{
         transform: translateY(-10vh) scale(1);
     }
 }
+
