--- a/style.css
+++ b/style.css
@@ -69,8 +69,8 @@
       }
       
       .flex-item-right {
-        background-color: dodgerblue;
-        padding: 10px;
+        background-color: rgb(241, 241, 241);
+        padding: 1%;
         flex: 50%;
       }
 
@@ -84,8 +84,85 @@
         padding: 1%;
         width: 100%;
         height: 100%;
-        font-size: 30px;
+        font-size: 25px;
+        align-content: center;
+        border-radius: 3%;
+        text-align: center;
+        vertical-align: middle;
+        cursor: pointer;
       }
+
+      .flex-container2 >div:hover{
+        background-color: #4fc3dc44;
+        z-index: 1;
+        box-shadow: 0 0 10px #4fc3dc44,
+        0 0 20px #4fc3dc44,
+        0 0 40px #4fc3dc44,
+        0 0 80px #4fc3dc44,
+        0 0 100px #4fc3dc44; 
+        transition: 0.25s; 
+        /* color: #D9D9D9; */
+        border-radius: 5%;
+      }
+
+
+
+      /* Pop Up section */
+      .popup{
+width:60%;
+background:#fff;
+border-radius:6px;
+position:absolute;
+top:0%;
+left:50%;
+transform:translate(-50%,-50%) scale(0.1);
+text-align:center;
+padding:0 30px 30px;
+color:#333;
+visibility:hidden;
+transition: transform 0.4s, top 0.4s;
+}
+
+.open-popup{
+visibility:visible;
+top:50%;
+
+transform: translate(-50%,-50%) scale(1);
+}
+.close-popup{
+visibility:hidden;
+top:0%;
+transform: translate(-50%,-50%) scale(0.1);
+}
+
+.popup img{
+width:15%;
+margin-top:-09%;
+border-radius:50%;
+box-shadow:0 2px 5px rgba(0,0,0,0.2);
+}
+
+ .popup h2{
+ font-size:35px auto;
+ font-weight:500;
+ margin:30px 0 10px;
+ }
+   .popup button{
+   width:100%;
+   height: fit-content;
+   margin-top:4%;
+   padding: 10px 0;
+   background:#6fd649;
+   color:#fff;
+   border:0;
+   outline:pointer;
+   outline:none;
+   font-size:18px;
+   border-radius:4px;
+   box-shadow: 0 5px 5px rgbs(0, 0, 0, 0.2);
+   }
+
+   /* End of Popup */
             @media screen and (max-width: 600px) {
         .topnav a:not(:first-child) {display: none;}
         .topnav a.icon {
@@ -120,6 +197,7 @@
         button{
           height: 23px;
           align-items: center;
+          cursor: pointer;
         }
         .topnav.responsive a {
           float: none;
@@ -224,6 +302,7 @@ body{
 }
 #btn2{
   float: right;
+  z-index: -4;
 }
 
 .button {
