--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@
         padding: 1%;
         width: 100%;
         height: 100%;
-        font-size: 25px;
+        font-size: 25px auto;
         align-content: center;
         border-radius: 3%;
         text-align: center;
