--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
         background-color: transparent;
         position:fixed;
         width: 100%;
-        height: 50%;
+        height: 20%;
         margin:0%;
         z-index: 1;
       }
@@ -71,19 +71,22 @@
       .flex-item-right {
         background-color: rgb(241, 241, 241);
         padding: 1%;
+        padding-top: 1%;
         flex: 50%;
       }
 
       .flex-container2{
         display:flex;
         background-color: transparent;
+        height: fit-content;
       }
       .flex-container2 > div{
-        background-color: #4fc3dc;
+        background-color: #12558A;
+        color: #ddd;
         margin: 1%;
         padding: 1%;
         width: 100%;
-        height: 100%;
+        height: fit-content;
         font-size: 25px auto;
         align-content: center;
         border-radius: 3%;
@@ -91,10 +94,12 @@
         vertical-align: middle;
         cursor: pointer;
       }
+      /*  */
 
       .flex-container2 >div:hover{
         background-color: #4fc3dc44;
         z-index: 1;
+        color: #12558A;
         box-shadow: 0 0 10px #4fc3dc44,
         0 0 20px #4fc3dc44,
         0 0 40px #4fc3dc44,
@@ -104,7 +109,6 @@
         /* color: #D9D9D9; */
         border-radius: 5%;
       }
-
 
 
       /* Pop Up section */
@@ -117,7 +121,9 @@ top:0%;
 left:50%;
 transform:translate(-50%,-50%) scale(0.1);
 text-align:center;
-padding:0 30px 30px;
+   padding-bottom: 10%;
+   padding:0 30px 30px;
+   padding-bottom: 4%;
 color:#333;
 visibility:hidden;
 transition: transform 0.4s, top 0.4s;
@@ -147,20 +153,45 @@ box-shadow:0 2px 5px rgba(0,0,0,0.2);
  font-weight:500;
  margin:30px 0 10px;
  }
-   .popup button{
-   width:100%;
+   .popup >.btn{
+   width:70%;
    height: fit-content;
    margin-top:4%;
    padding: 10px 0;
-   background:#6fd649;
-   color:#fff;
-   border:0;
+   color:#12558A;
+   background:#fff;
+   border: 2px solid #12558A;
    outline:pointer;
-   outline:none;
+   /* outline:none; */
    font-size:18px;
    border-radius:4px;
    box-shadow: 0 5px 5px rgbs(0, 0, 0, 0.2);
    }
+   .popup button:hover{
+    color: #fff;
+    z-index: 1;
+    background-color: #12558A;
+    border: 2px solid #12558A;
+    /* transition: 0.2s;  */
+    /* color: #D9D9D9; */
+    border-radius: 4px;
+   }
+   #cbtn{
+    margin-top:4%;
+    padding: 10px 0;
+    font-size:18px;
+    border-radius:4px;
+    color: #fff;
+    border: 0px;
+    width:40%; 
+    background-color: rgba(197, 13, 13, 0.651);
+   }
+   #cbtn:hover{
+    background-color: #fff;
+    color: rgba(197, 13, 13, 0.651);
+    border: 2px solid rgba(197, 13, 13, 0.651);
+   }
+ 
 
    /* End of Popup */
             @media screen and (max-width: 600px) {
