--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
 
    
       .topnav a:hover {
-        /* background-color: #4fc3dc44; */
+        /* background-color: transparent; */
         background-color: #4fc3dc44;
         z-index: 1;
         box-shadow: 0 0 10px #4fc3dc44,
